--- a/MvcTest/MvcTest.Web/MvcTest.Web.csproj
+++ b/MvcTest/MvcTest.Web/MvcTest.Web.csproj
@@ -136,6 +136,7 @@
     <Content Include="Assets\css\bootstrap.css" />
     <Content Include="Assets\css\bootstrap.min.css" />
     <Content Include="Assets\js\app.js" />
+    <Content Include="Assets\js\entities\person.js" />
     <Content Include="Assets\js\vendor\backbone.js" />
     <Content Include="Assets\js\vendor\backbone.marionette.js" />
     <Content Include="Assets\js\vendor\backbone.marionette.min.js" />
