--- a/MvcTest/MvcTest.Web/MvcTest.Web.csproj
+++ b/MvcTest/MvcTest.Web/MvcTest.Web.csproj
@@ -136,6 +136,11 @@
     <Content Include="Assets\css\bootstrap.css" />
     <Content Include="Assets\css\bootstrap.min.css" />
     <Content Include="Assets\js\app.js" />
+    <Content Include="Assets\js\apps\people\list\list_controller.js" />
+    <Content Include="Assets\js\apps\people\list\list_view.js" />
+    <Content Include="Assets\js\apps\people\list\yesNo.js" />
+    <Content Include="Assets\js\apps\people\people-app.js" />
+    <Content Include="Assets\js\common\views.js" />
     <Content Include="Assets\js\entities\person.js" />
     <Content Include="Assets\js\vendor\backbone.js" />
     <Content Include="Assets\js\vendor\backbone.marionette.js" />
@@ -149,6 +154,7 @@
     <Content Include="Assets\js\vendor\spin.min.js" />
     <Content Include="Assets\js\vendor\underscore.js" />
     <Content Include="Content\Style.css" />
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Areas\API\Views\web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
